main.css
html, body{
    height: 100%;
    min-height: 100%;
    margin: 0;
    overflow: hidden;
}


#canvas{
    width: 100%;
    height: 100%;
}

canvas { 
    image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
    image-rendering: -moz-crisp-edges;          /* Firefox                        */
    image-rendering: -o-crisp-edges;            /* Opera                          */
    image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
    image-rendering: pixelated;                 /* Chrome                         */
    image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
    -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */

}

#fpsMeter{
    position: absolute;
    left: 0;
    top: 0;
    margin: 3px;
    color: black;
}

.helper{
    position: absolute;
    right: 0;
    top: 0;
    margin: 3px;
    color: black;
}

